--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_LOCALE=id
+APP_FALLBACK_LOCALE=id
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=stationary
 DB_USERNAME=root
 DB_PASSWORD=
 
