--- a/.env.example
+++ b/.env.example
@@ -46,21 +46,21 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_MAILER=log
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 # Mailtrap
-# MAIL_MAILER=smtp
-# MAIL_HOST=sandbox.smtp.mailtrap.io
-# MAIL_PORT=2525
-# MAIL_USERNAME=572d57f9534155
-# MAIL_PASSWORD=84663399acbf1d
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
